API key validation and hard-coded entries to db