@@ -1,10 +1,12 @@
 package com.tcs.dhv.security;
 
+import com.tcs.dhv.service.ApiKeyService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -12,41 +14,54 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.List;
+import java.util.Collections;
 
 @Component
+@Slf4j
 @RequiredArgsConstructor
 public class ApiKeyFilter extends OncePerRequestFilter {
 
-    @Value("${api.key.header.name:API-KEY}")
+    private final ApiKeyService apiKeyService;
+
+    @Value("${api.key.header.name}")
     private String apiKeyHeaderName;
 
-    @Value("${api.key.secret}")
-    private String apiKeySecret;
-
     @Override
-    protected void doFilterInternal(HttpServletRequest request,
-                                    HttpServletResponse response,
-                                    FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(
+        final HttpServletRequest request,
+        final HttpServletResponse response,
+        final FilterChain filterChain
+    ) throws ServletException, IOException {
 
-        String path = request.getRequestURI();
+        final var path = request.getRequestURI();
 
-        // Only apply this filter to /api/tracking/**
-        if (!path.startsWith("/api/testing")) {
+        if (!path.startsWith("/api/tracking")) {
+            log.debug("Skipping API key filter for path: {}", path);
             filterChain.doFilter(request, response);
             return;
         }
 
-        String apiKey = request.getHeader(apiKeyHeaderName);
-        if (apiKeySecret.equals(apiKey)) {
-            // Optionally, you can set authentication in the security context
-            SecurityContextHolder.getContext().setAuthentication(
-                new UsernamePasswordAuthenticationToken("apiKeyUser", null, List.of())
+        final var rawKey = request.getHeader(apiKeyHeaderName);
+
+        if (rawKey == null || rawKey.isBlank()) {
+            log.warn("Missing or blank API Key");
+            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+            response.getWriter().write("Unauthorized: API Key is missing");
+            return;
+        }
+
+        if (apiKeyService.validate(rawKey).isPresent()) {
+            log.info("API Key validated successfully");
+            final var authentication = new UsernamePasswordAuthenticationToken(
+                "apiKeyUser", null, Collections.emptyList()
             );
+            SecurityContextHolder.getContext().setAuthentication(authentication);
             filterChain.doFilter(request, response);
         } else {
+            log.warn("Invalid API Key provided");
             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-            response.getWriter().write("Invalid API Key");
+            response.getWriter().write("Unauthorized: Invalid API Key");
         }
     }
+
 }
